fix weird gap that causes menu to disappear

--- a/src/css/bootstrap/_variables.scss
+++ b/src/css/bootstrap/_variables.scss
@@ -530,8 +530,8 @@ $form-feedback-invalid-color:       theme-color("danger") !default;
 // Dropdown menu container and contents.
 
 $dropdown-min-width:                10rem !default;
-$dropdown-padding-y:                .5rem !default;
-$dropdown-spacer:                   .125rem !default;
+$dropdown-padding-y:                .0rem !default;
+$dropdown-spacer:                   .0rem !default;
 $dropdown-bg:                       $white !default;
 $dropdown-border-color:             rgba($black, .15) !default;
 $dropdown-border-radius:            $border-radius !default;
